# SAIRCP-LLM-RAG

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  REQUIRED_FILES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: DEMO_EXAMPLES.md  E1_ANALISIS_REQUERIMIENTOS.md  E2_DISENO_ARQUITECTURA.md  E3_E4_SECCIONES_6_10.md  PROJECT_DOCUMENTATION.md  VIDEO_GUIDE.md
docs/adr/: ADR-001-seleccion-llm.md  ADR-002-seleccion-vector-store.md  ADR-003-arquitectura-multi-agente.md
docs/api/: openapi.yaml
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
notebooks/: eval_dataset.json
reports/: ragas_report.json
scripts/: evaluate_llm.py
src/: main.py
src/agents/: analyzer.py  comparator.py  evaluator.py  investigator.py  orchestrator.py  reporter.py
src/api/: routes.py
src/core/: config.py  schemas.py
src/rag/: document_processor.py  ingest.py  retriever.py  vector_store.py
tests/: conftest.py  locustfile.py  test_api.py  test_ingest.py  test_integration.py  test_scoring.py
