[project]
name = "saircp-llm-rag"
version = "1.0.0"
description = "Sistema de Apoyo para Identificación de Riesgos en Contrataciones Públicas mediante IA"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
